--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer id="footer">
 	<p id="footer-content">
 		&copy; {{ "now" | date: "%Y" }} <a href="{{ site.url }}">{{ site.title }}</a>
-		<br />Powered by <a href="https://jekyllrb.com">Jekyll</a> | Theme by Vivi
+		<br />Built by Jekyll {{ jekyll.version }} on {{ "now" | date: "%F %T %z" }}
 	</p>
 </footer>
