--- a/_includes/widgets/link_buttons.html
+++ b/_includes/widgets/link_buttons.html
@@ -1,6 +1,6 @@
 <h2>Links</h2>
 <ul>
- <li><a href="http://maplestrip.space"><img src="/assets/mapletree-8831.png"></a></li>
- <li><a href="https://egscomics.com"><img src="/assets/egs-8831.gif"></a></li>
- <li><a href="https://dragonflycave.com"><img src="/assets/tcod-8831.png"></a></li>
+ <li><a href="http://maplestrip.space"><img src="/assets/mapletree-8831.png" alt="Maplestrip's Maple Tree"></a></li>
+ <li><a href="https://egscomics.com"><img src="/assets/egs-8831.gif" alt="El Goonish Shive"></a></li>
+ <li><a href="https://dragonflycave.com"><img src="/assets/tcod-8831.png" alt="The Cave of Dragonflies"></a></li>
 </ul>
