--- a/_includes/widgets/meta_buttons.html
+++ b/_includes/widgets/meta_buttons.html
@@ -1,5 +1,6 @@
 <h2>Meta</h2>
 <ul>
- <li><a href="/feed.rss">RSS Feed</a></li>
- <li><img src="/assets/ident-8831.gif"></li>
+<li><a href="/feed.rss"><img src="/assets/rss-8831.png" alt="This blog's RSS Feed"></a></li>
+<li><img src="/assets/ident-8831.gif"></li>
+<li><a href="https://pages.github.com"><img src="/assets/gh-pages-8831.png" alt="Hosted by GitHub Pages"></a></li>
 </ul>
