Added buttons Latest post is now shown on home page main.css is distributed under GNU GPL

--- a/_includes/widgets/link_buttons.html
+++ b/_includes/widgets/link_buttons.html
@@ -3,4 +3,5 @@
  <li><a href="http://maplestrip.space"><img src="/assets/mapletree-8831.png" alt="Maplestrip's Maple Tree"></a></li>
  <li><a href="https://egscomics.com"><img src="/assets/egs-8831.gif" alt="El Goonish Shive"></a></li>
  <li><a href="https://dragonflycave.com"><img src="/assets/tcod-8831.png" alt="The Cave of Dragonflies"></a></li>
+ <li><a href="https://discord.gg/6Czjtnv"><img src="/assets/nothing-8831.png" alt="Nothing"></a></li>
 </ul>
