--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,10 @@
 /*
+This file is distributed under the GNU GPL version 3.
+This file is derived from Green Park, Copyright 2008 Cordobo.
+Green Park is distributed under the terms of the GNU GPL.
+*/
+
+/*
 
 Contents:
 0) Explicit reset
