--- a/_includes/widgets/meta_buttons.html
+++ b/_includes/widgets/meta_buttons.html
@@ -3,4 +3,5 @@
 <li><a href="/feed.rss"><img src="/assets/rss-8831.png" alt="This blog's RSS Feed"></a></li>
 <li><img src="/assets/ident-8831.gif"></li>
 <li><a href="https://pages.github.com"><img src="/assets/gh-pages-8831.png" alt="Hosted by GitHub Pages"></a></li>
+<li><a href="https://www.reddit.com/message/compose?to=mincerafter42&subject=Blog"><img src="/assets/reddit-8831.png" alt="Message me on Reddit"></a></li>
 </ul>
