Added favicon and PNG link. Added Labels page. Changed header menu.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
 			<div id="blog-tagline">{{ site.description }}</div>
 		</a>
 	</div>
-	<nav id="header-menu", aria-label="Header menu">
+	<nav id="header-menu" aria-label="Header menu">
 		<ul id="header-menu-content">
 			{% for item in site.data.header_menu %}
 				<li>
