--- a/_includes/widgets/link_buttons.html
+++ b/_includes/widgets/link_buttons.html
@@ -4,4 +4,5 @@
  <li><a href="https://egscomics.com"><img src="/assets/egs-8831.gif" alt="El Goonish Shive"></a></li>
  <li><a href="https://dragonflycave.com"><img src="/assets/tcod-8831.png" alt="The Cave of Dragonflies"></a></li>
  <li><a href="https://discord.gg/6Czjtnv"><img src="/assets/nothing-8831.png" alt="Nothing"></a></li>
+ <li><a href="http://www.libpng.org/pub/png"><img src="/assets/png-8831.png" alt="Portable Network Graphics"></a></li>
 </ul>
