--- a/_includes/widgets/meta_buttons.html
+++ b/_includes/widgets/meta_buttons.html
@@ -1,7 +1,7 @@
 <h2>Meta</h2>
 <ul>
 <li><a href="/feed.rss"><img src="/assets/rss-8831.png" alt="This blog's RSS Feed"></a></li>
-<li><img src="/assets/ident-8831.gif"></li>
+<li><a href="/labels"><img src="/assets/ident-8831.gif" alt="This user is aromantic, a demigirl, trans, non-binary, and asexual."></a></li>
 <li><a href="https://pages.github.com"><img src="/assets/gh-pages-8831.png" alt="Hosted by GitHub Pages"></a></li>
 <li><a href="https://www.reddit.com/message/compose?to=mincerafter42&subject=Blog"><img src="/assets/reddit-8831.png" alt="Message me on Reddit"></a></li>
 </ul>
