--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,10 @@
  	<title>{% if page.title %}{{ page.title | append: " | " | append: site.title | escape}}{% else %}{{ site.title | escape }}{% endif %}</title>
  	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
- 	<link rel="stylesheet" href="{{ "/css/main.css" }}">
- 	<link rel="stylesheet" href="{{ "/css/custom_color.css" }}">
- 	<link rel="stylesheet" href="{{ "/css/mobile.css" }}" media="all and (max-width:899px)">
+ 	<link rel="stylesheet" href="/css/main.css">
+ 	<link rel="stylesheet" href="/css/custom_color.css">
+ 	<link rel="stylesheet" href="/css/mobile.css" media="all and (max-width:899px)">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+	<link rel="shortcut icon" href="/assets/favicon.png">
  	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 </head>
