--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 	<nav id="skip" aria-label="Skip Links">
 		<a class="tab-shortcut" id="shortcut-content" href="#content">Skip to content</a>
 		<a class="tab-shortcut" id="shortcut-left-sidebar" href="#left">Skip to first sidebar</a>
-		<a class="tab-shortcut" id="shortcut-right-sidebar" href="#right">Skip to right sidebar</a>
+		<a class="tab-shortcut" id="shortcut-right-sidebar" href="#right">Skip to second sidebar</a>
 	</nav>
 	
 	<div id="header">
@@ -14,8 +14,9 @@
 	<nav id="header-menu" aria-label="Header menu">
 		<ul id="header-menu-content">
 			{% for item in site.data.header_menu %}
-				<li>
-					<a href="{{ item.link }}">{{ item.name }}</a>
+				<li{% if item.submenu %} class="menu-item-has-children"{% endif %}>
+					{% if item.link %}<a href="{{ item.link }}">{{ item.name }}</a>{% else %}{{ item.name }}{% endif %}
+					{% if item.submenu %}{% include submenu.html menu=item.submenu %}{% endif %}
 				</li>
 			{% endfor %}
 		</ul>
