--- a/_includes/widgets/link_buttons.html
+++ b/_includes/widgets/link_buttons.html
@@ -5,4 +5,5 @@
  <li><a href="https://dragonflycave.com"><img src="/assets/tcod-8831.png" alt="The Cave of Dragonflies"></a></li>
  <li><a href="https://discord.gg/6Czjtnv"><img src="/assets/nothing-8831.png" alt="Nothing"></a></li>
  <li><a href="http://www.libpng.org/pub/png"><img src="/assets/png-8831.png" alt="Portable Network Graphics"></a></li>
+ <li><a href="https://www.w3.org/Graphics/SVG/"><img src="/assets/svg-8831.svg" alt="Scalable Vector Graphics"></a></li>
 </ul>
