Added Fillbert comix button.

--- a/_includes/widgets/link_buttons.html
+++ b/_includes/widgets/link_buttons.html
@@ -3,6 +3,7 @@
  <li><a href="http://maplestrip.space"><img src="/assets/mapletree-8831.png" alt="Maplestrip's Maple Tree"></a></li>
  <li><a href="https://egscomics.com"><img src="/assets/egs-8831.gif" alt="El Goonish Shive"></a></li>
  <li><a href="https://dragonflycave.com"><img src="/assets/tcod-8831.png" alt="The Cave of Dragonflies"></a></li>
+ <li><a href="https://mincerafter42.github.io/fillbert"><img src="/assets/fillbert-8831.svg" alt="Fillbert comix"></a></li>
  <li><a href="https://discord.gg/6Czjtnv"><img src="/assets/nothing-8831.png" alt="Nothing"></a></li>
  <li><a href="http://www.libpng.org/pub/png"><img src="/assets/png-8831.png" alt="Portable Network Graphics"></a></li>
  <li><a href="https://www.w3.org/Graphics/SVG/"><img src="/assets/svg-8831.svg" alt="Scalable Vector Graphics"></a></li>
