Made a cool feeds button instead of sleeping sleep

--- a/_includes/widgets/meta_buttons.html
+++ b/_includes/widgets/meta_buttons.html
@@ -1,13 +1,11 @@
 <h2>Meta</h2>
+<map name="feeds">
+<area shape="rect" coords="5,2,32,29" href="/feed.atom"/>
+<area shape="rect" coords="33,2,60,29" href="/feed.json"/>
+<area shape="rect" coords="61,2,88,29" href="/feed.rss"/>
+</map>
 <ul>
-<li>Feeds
-	<ul>
-	<li><a href="/feed.atom" rel="alternate" type="application/atom+xml">Atom feed</a></li>
-	<li><a href="/feed.json" rel="alternate" type="application/feed+json">JSON feed</a></li>
-	<li><a href="/feed.rss" rel="alternate" type="application/rss+xml">RSS feed</a></li>
-	<li><a href="/site-setup">Feed info</a></li>
-	</ul>
-</li>
+<li><img src="/assets/feeds-8831.png" alt="Syndication feeds" usemap="#feeds"/></li>
 <li><a href="/labels"><img src="/assets/ident-8831.gif" alt="This user is aromantic, a demigirl, trans, non-binary, and asexual."></a></li>
 <li><a href="https://pages.github.com"><img src="/assets/gh-pages-8831.png" alt="Hosted by GitHub Pages"></a></li>
 <li><a href="https://www.reddit.com/message/compose?to=mincerafter42&subject=Blog"><img src="/assets/reddit-8831.png" alt="Message me on Reddit"></a></li>
