Added alt text to feed links

--- a/_includes/widgets/meta_buttons.html
+++ b/_includes/widgets/meta_buttons.html
@@ -1,11 +1,12 @@
 <h2>Meta</h2>
-<map name="feeds">
-<area shape="rect" coords="5,2,32,29" href="/feed.atom"/>
-<area shape="rect" coords="33,2,60,29" href="/feed.json"/>
-<area shape="rect" coords="61,2,88,29" href="/feed.rss"/>
-</map>
 <ul>
-<li><img src="/assets/feeds-8831.png" alt="Syndication feeds" usemap="#feeds"/></li>
+<li>
+<map name="feeds">
+<area shape="rect" coords="5,2,32,29" href="/feed.atom" alt="Atom feed"/>
+<area shape="rect" coords="33,2,60,29" href="/feed.json" alt="JSON feed"/>
+<area shape="rect" coords="61,2,88,29" href="/feed.rss" alt="RSS feed"/>
+</map>
+<img src="/assets/feeds-8831.png" alt="Syndication feeds" usemap="#feeds"/></li>
 <li><a href="/labels"><img src="/assets/ident-8831.gif" alt="This user is aromantic, a demigirl, trans, non-binary, and asexual."></a></li>
 <li><a href="https://pages.github.com"><img src="/assets/gh-pages-8831.png" alt="Hosted by GitHub Pages"></a></li>
 <li><a href="https://www.reddit.com/message/compose?to=mincerafter42&subject=Blog"><img src="/assets/reddit-8831.png" alt="Message me on Reddit"></a></li>
