--- a/_includes/widgets/meta_buttons.html
+++ b/_includes/widgets/meta_buttons.html
@@ -8,6 +8,7 @@
 </map>
 <img src="/assets/feeds-8831.png" alt="Syndication feeds" usemap="#feeds"/></li>
 <li><a href="/labels"><img src="/assets/ident-8831.gif" alt="This user is aromantic, a demigirl, trans, non-binary, and asexual."></a></li>
+<li><a href="https://buymeacoffee.com/mincerafter42"><img src="/assets/bmac-8831.png" alt="Buy me a coffee (I don't even drink coffee lol)"></a></li>
 <li><a href="https://pages.github.com"><img src="/assets/gh-pages-8831.png" alt="Hosted by GitHub Pages"></a></li>
 <li><a href="https://www.reddit.com/message/compose?to=mincerafter42&subject=Blog"><img src="/assets/reddit-8831.png" alt="Message me on Reddit"></a></li>
 </ul>
