--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,5 +11,7 @@
  	<link rel="stylesheet" href="/css/mobile.css" media="all and (max-width:899px)">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="shortcut icon" href="/assets/favicon.png">
- 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+ 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.rss" | prepend: site.baseurl | prepend: site.url }}">
+ 	<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.atom" | prepend: site.baseurl | prepend: site.url }}">
+ 	<link rel="alternate" type="application/feed+json" title="{{ site.title }}" href="{{ "/feed.json" | prepend: site.baseurl | prepend: site.url }}">
 </head>
