--- a/common.css
+++ b/common.css
@@ -33,7 +33,7 @@ main {
 	padding: 10px;
 }
 footer {text-align: center}
-h1, h2, h3, h4, h5, h6 {color: #ff49c2;font-weight:bold;}
+h1, h2, h3, h4, h5, h6 {color: #ff7cd3;font-weight:bold;}
 a {
 	color: #ff28ff;
 	text-decoration: underline;
