Added Atkinson Hyperlegible font-faces to SSSS

--- a/ssss/ssss.css
+++ b/ssss/ssss.css
@@ -24,3 +24,24 @@ blockquote .cite-name {font-size:14pt}
 img.faux-char {height:1em;width:auto;vertical-align:text-top;}
 
 .global-footer {text-align:center;font-size:12pt;padding:10pt;border-top:1px solid #666;background-color:#fff}
+
+@font-face {
+	font-family: "Atkinson Hyperlegible";
+	font-weight: normal;font-style: normal;
+	src: local("Atkinson Hyperlegible Regular"), local("AtkinsonHyperlegible-Regular"), url("/assets/Atkinson-Hyperlegible-Regular-102.woff");
+}
+@font-face {
+	font-family: "Atkinson Hyperlegible";
+	font-weight: normal;font-style: italic;
+	src: local("Atkinson Hyperlegible Italic"), local("AtkinsonHyperlegible-Italic"), url("/assets/Atkinson-Hyperlegible-Italic-102.woff");
+}
+@font-face {
+	font-family: "Atkinson Hyperlegible";
+	font-weight: bold;font-style: normal;
+	src: local("Atkinson Hyperlegible Bold"), local("AtkinsonHyperlegible-Bold"), url("/assets/Atkinson-Hyperlegible-Bold-102.woff");
+}
+@font-face {
+	font-family: "Atkinson Hyperlegible";
+	font-weight: bold;font-style: italic;
+	src: local("Atkinson Hyperlegible Bold Italic"), local("AtkinsonHyperlegible-BoldItalic"), url("/assets/Atkinson-Hyperlegible-BoldItalic-102.woff");
+}
