--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 <link rel=icon href=/assets/favicon.png>
 <link rel=alternate href={{site.git_repo_url}}/blob/main/{{page.path}}?plain=1>
 <title>{{page.title|default:site.title}}</title>
+{{page.head_add|default:''}}
 <main>
 {{content}}
 </main>
